--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Cart"></activity>
-        <activity android:name=".Login" />
-        <activity
-            android:name=".Qr"
-            android:label="@string/title_activity_qr"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Qr"
+            android:label="@string/title_activity_qr"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
